test_scores/negative_dimers/features/Q15147.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q15147.pkl.xz